--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             <a class="nav-link" href="#">Pesticides</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link ">Blog</a>
+            <a class="nav-link " href="#">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link ">Log In</a>
+            <a class="nav-link " href="#">Log In</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" >Sign Up</a>
+            <a class="nav-link" href="#" >Sign Up</a>
           </li>
         </ul>
       </div>
