--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-link" style="background:linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);border-bottom-width: 1px;border-bottom-style: solid;border-bottom-color: #A5C9CA;box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 15%);">
+  <nav class="navbar navbar-expand-lg bg-link" style="background:linear-gradient(90deg, #fcff9e 0%, #c67700 100%);border-bottom-width: 1px;border-bottom-style: solid;border-bottom-color: #A5C9CA;box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 15%);">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" style="margin-left:1.7em;">
         <img src="https://cdn.iconscout.com/icon/free/png-256/farmer-2204210-1838555.png" alt="" width="30" height="29" class="d-inline-block align-text-top">
