--- a/index.html
+++ b/index.html
@@ -3,73 +3,150 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="icon" href="icon/harvest.ico">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-  <title>FarmEasy - An easy and profitable way to buy and sell farm products </title>
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=DM+Sans&display=swap" rel="stylesheet">
+  <title>FarmEasy | A new way to buy and sell farm products </title>
   <style media="screen">
-  .btn-outline-success {
-    --bs-btn-color: #2C3639;
-    --bs-btn-border-color: #2C3639;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #2C3639;
-    --bs-btn-hover-border-color: #2C3639;
-    --bs-btn-focus-shadow-rgb: 25, 135, 84;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #EF5B0C;
-    --bs-btn-active-border-color: #EF5B0C;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #2C3639;
-    --bs-btn-disabled-bg: transparent;
-    --bs-gradient: none;
-  }
+    .navbar {
+      transition: box-shadow .2s ease, background .2s ease;
+    }
+
+    .navbar.navbar-sticky-scrolling {
+      background: #f8f9fa !important;
+      box-shadow: 0 0 10px rgb(0 0 0 / 20%);
+    }
+
+    /* css for sign-in and log-in buttons */
+    .button--small {
+      padding: 5px 10px;
+    }
+
+    .button {
+      font-family: "Basis Grotesque", sans-serif;
+      font-size: 14px;
+      line-height: 1;
+      font-weight: 700;
+      background-color: #fff;
+      border: 1px solid #3c3830;
+      -webkit-box-shadow: 1px 1px 0 #3c3830;
+      box-shadow: 1px 1px 0 #3c3830;
+      color: #3c3830;
+      display: -webkit-inline-box;
+      display: -ms-inline-flexbox;
+      display: inline-flex;
+      overflow: hidden;
+      padding: 12px 18px;
+      position: relative;
+      -webkit-transition: all 200ms ease-in-out;
+      transition: all 200ms ease-in-out;
+      z-index: 0;
+    }
+
+    nav li a {
+      text-decoration: none;
+    }
+
+    .button::after {
+      background-color: #e6ffa0;
+      border-radius: 50%;
+      content: "";
+      display: block;
+      height: 0;
+      left: 50%;
+      padding-bottom: 0%;
+      position: absolute;
+      top: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      -webkit-transition: all 200ms cubic-bezier(0.06, 0.43, 0.98, 0.09);
+      transition: all 200ms cubic-bezier(0.06, 0.43, 0.98, 0.09);
+      width: 0%;
+      z-index: -1;
+    }
   </style>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-link" style="background:linear-gradient(90deg, #fcff9e 0%, #c67700 100%);border-bottom-width: 1px;border-bottom-style: solid;border-bottom-color: #A5C9CA;box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 15%);">
-    <div class="container-fluid">
+  <section class="header">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-sticky-scrolling">
       <a class="navbar-brand" href="#" style="margin-left:1.7em;">
-        <img src="https://cdn.iconscout.com/icon/free/png-256/farmer-2204210-1838555.png" alt="" width="30" height="29" class="d-inline-block align-text-top">
+        <img src="https://cdn.iconscout.com/icon/free/png-256/farmer-2204210-1838555.png" alt="" width="30" height="29" class="d-inline-block align-top">
         &nbsp;FarmEasy
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler btn " style="background-color : #EAF6F6;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <div data-is-ix2-target="1" class="g-nav_menu-button-icon" data-w-id="8c5acd42-4f32-fafd-ae4e-e7aeb2234b27" data-animation-type="lottie" data-src="https://assets-global.website-files.com/5f1a22ca3b746e2f46cafd62/5f1a22ca3b746e32a7cafdbb_nav.json" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="1.5" data-duration="0" data-ix2-initial-state="0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" preserveAspectRatio="xMidYMid meet" style="width: 100%; height: 100%; transform: translate3d(0px, 0px, 0px);"><defs><clipPath id="__lottie_element_2"><rect width="24" height="24" x="0" y="0"></rect></clipPath><clipPath id="__lottie_element_16"><path d="M0,0 L24,0 L24,24 L0,24z"></path></clipPath></defs><g clip-path="url(#__lottie_element_2)"><g clip-path="url(#__lottie_element_16)" transform="matrix(1,0,0,1,0,0)" opacity="1" style="display: block;"><g transform="matrix(1,0,0,1,12,22)" opacity="1" style="display: block;"><g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)"><path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path><path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path></g></g><g transform="matrix(1,0,0,1,12,16)" opacity="1" style="display: block;"><g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)"><path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path><path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path></g></g><g transform="matrix(1,0,0,1,12,9.998000144958496)" opacity="1" style="display: block;"><g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)"><path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path><path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path></g></g></g></g></svg></div>
+        <span class="navbar-toggler-icon" style="display: none ;">
+          <svg class="svg-inline--fa fa-times fa-w-11 fa-fw m-0" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512" data-fa-i2svg="">
+            <path fill="currentColor"
+              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z">
+            </path>
+          </svg>
+        </span>
       </button>
-      <div class="collapse navbar-collapse justify-content-evenly" id="navbarNavDropdown">
-        <ul class="navbar-nav navbar-nav-scroll mr-auto" style="--bs-scroll-height: 150px;">
-          <form class="d-flex" role="search" style="margin-left: 1.875em;margin-right: 5em;">
-            <input class="form-control me-2" type="search" placeholder="Find all your wants here" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">&nbsp;Search&nbsp;</button>
+      <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <ul class="navbar-nav navbar-nav-scroll mr-auto " style="--bs-scroll-height: 150px;">
+          <form class="d-flex my-2 my-lg-0" role="search" style="margin-left: 1.875em;margin-right: 5em;">
+            <input class="form-control mr-sm-2" type="search" placeholder="Find all your wants here" aria-label="Search">
+            <button class="btn btn-outline-success  my-2 my-sm-0" type="submit">
+              <svg style="padding-top:4px;" role="img" aria-labelledby="search-icon-title" class="search-icon input-field__icon css-0 evmgdi90" width="18" height="18" viewBox="0 0 22 22">
+                <title id="search-icon-title">Search</title>
+                <g transform="translate(2.000000, 2.000000)" stroke="#999" stroke-width="1.5" fill="none">
+                  <circle cx="7" cy="7" r="7"></circle>
+                  <path d="M12,13 L17,18" stroke-linecap="square"></path>
+                </g>
+              </svg>
+              Search&nbsp;&nbsp;&nbsp;
+            </button>
           </form>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">About Us</a>
+            <button type="button" style="border : none;" class="btn btn-outline-primary">
+              <a class="nav-link " style="padding: 0px;" aria-current="page" href="#">About Us</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle show" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true">Fertilizers</a>
-            <ul class="dropdown-menu " data-bs-popper="static">
-              <li><a class="dropdown-item" href="#">Organic</a></li>
-              <li><a class="dropdown-item" href="#">Chemical</a></li>
-              <li><a class="dropdown-item" href="#">Mix of both <em>(recommended)</em></a></li>
-            </ul>
+            <button type="button" style="border : none;" class="btn btn-outline-warning">
+              <a class="nav-link dropdown-toggle" style="padding: 0px;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Fertilizers
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Organic</a>
+                <a class="dropdown-item" href="#">Chemical</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Mix of both <em>(recommended)</em></a>
+              </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pesticides</a>
+            <button type="button" style="border : none;" class="btn btn-outline-secondary">
+              <a class="nav-link" style="padding: 0px;" href="#">Pesticides</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Blog</a>
+            <button type="button" style="border : none;" class="btn btn-outline-info">
+              <a class="nav-link " style="padding: 0px;" href="#">Blog</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link " href="#">Log In</a>
+        </ul>
+        <ul class="navbar-nav navbar-nav-scroll ">
+          <li class="nav__item nav__item--button nav__item--button-mobile" style="margin-right:.4em;">
+            <a href="" class="button button--small" style="background-color: rgb(245, 81, 91); color: rgb(255, 255, 255); cursor:pointer" onmouseover="this.style.color='#000000'" onmouseout="this.style.color='#FFFFFF'" rel="noopener noreferrer"
+              target="_blank">
+              <span>Log in</span>
+            </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" >Sign Up</a>
+          <li class="nav__item nav__item--button nav__item--button-mobile">
+            <a href="" class="button button--small" style="background-color: #5BB318; color: rgb(255, 255, 255); cursor:pointer" onmouseover="this.style.color='#000000'" onmouseout="this.style.color='#FFFFFF'" rel="noopener noreferrer"
+              target="_blank">
+              <span>Sign up</span>
+            </a>
           </li>
         </ul>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </section>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
 
 </html>
 <!-- &nbsp; -->
+<!-- box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 15%); -->
