--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="icon" href="icon/harvest.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=DM+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Courier+Prime&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>FarmEasy | A new way to buy and sell farm products </title>
   <style media="screen">
     .navbar {
@@ -24,14 +25,13 @@
     }
 
     .button {
-      font-family: "Basis Grotesque", sans-serif;
       font-size: 14px;
       line-height: 1;
       font-weight: 700;
       background-color: #fff;
       border: 1px solid #3c3830;
-      -webkit-box-shadow: 1px 1px 0 #3c3830;
-      box-shadow: 1px 1px 0 #3c3830;
+      -webkit-box-shadow: 2px 2px 0 #3c3830;
+      box-shadow: 2px 2px 0 #3c3830;
       color: #3c3830;
       display: -webkit-inline-box;
       display: -ms-inline-flexbox;
@@ -42,6 +42,7 @@
       -webkit-transition: all 200ms ease-in-out;
       transition: all 200ms ease-in-out;
       z-index: 0;
+      font-family: 'Courier Prime', monospace;
     }
 
     nav li a {
@@ -65,82 +66,114 @@
       width: 0%;
       z-index: -1;
     }
+
   </style>
 </head>
 
 <body>
-  <section class="header">
-    <nav class="navbar navbar-expand-lg navbar-light navbar-sticky-scrolling">
-      <a class="navbar-brand" href="#" style="margin-left:1.7em;">
-        <img src="https://cdn.iconscout.com/icon/free/png-256/farmer-2204210-1838555.png" alt="" width="30" height="29" class="d-inline-block align-top">
-        &nbsp;FarmEasy
-      </a>
-      <button class="navbar-toggler btn " style="background-color : #EAF6F6;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <div data-is-ix2-target="1" class="g-nav_menu-button-icon" data-w-id="8c5acd42-4f32-fafd-ae4e-e7aeb2234b27" data-animation-type="lottie" data-src="https://assets-global.website-files.com/5f1a22ca3b746e2f46cafd62/5f1a22ca3b746e32a7cafdbb_nav.json" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="1.5" data-duration="0" data-ix2-initial-state="0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" preserveAspectRatio="xMidYMid meet" style="width: 100%; height: 100%; transform: translate3d(0px, 0px, 0px);"><defs><clipPath id="__lottie_element_2"><rect width="24" height="24" x="0" y="0"></rect></clipPath><clipPath id="__lottie_element_16"><path d="M0,0 L24,0 L24,24 L0,24z"></path></clipPath></defs><g clip-path="url(#__lottie_element_2)"><g clip-path="url(#__lottie_element_16)" transform="matrix(1,0,0,1,0,0)" opacity="1" style="display: block;"><g transform="matrix(1,0,0,1,12,22)" opacity="1" style="display: block;"><g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)"><path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path><path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path></g></g><g transform="matrix(1,0,0,1,12,16)" opacity="1" style="display: block;"><g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)"><path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path><path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path></g></g><g transform="matrix(1,0,0,1,12,9.998000144958496)" opacity="1" style="display: block;"><g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)"><path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path><path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path></g></g></g></g></svg></div>
-        <span class="navbar-toggler-icon" style="display: none ;">
-          <svg class="svg-inline--fa fa-times fa-w-11 fa-fw m-0" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512" data-fa-i2svg="">
-            <path fill="currentColor"
-              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z">
-            </path>
-          </svg>
-        </span>
-      </button>
-      <div class="collapse navbar-collapse " id="navbarSupportedContent">
-        <ul class="navbar-nav navbar-nav-scroll mr-auto " style="--bs-scroll-height: 150px;">
-          <form class="d-flex my-2 my-lg-0" role="search" style="margin-left: 1.875em;margin-right: 5em;">
-            <input class="form-control mr-sm-2" type="search" placeholder="Find all your wants here" aria-label="Search">
-            <button class="btn btn-outline-success  my-2 my-sm-0" type="submit">
-              <svg style="padding-top:4px;" role="img" aria-labelledby="search-icon-title" class="search-icon input-field__icon css-0 evmgdi90" width="18" height="18" viewBox="0 0 22 22">
-                <title id="search-icon-title">Search</title>
-                <g transform="translate(2.000000, 2.000000)" stroke="#999" stroke-width="1.5" fill="none">
-                  <circle cx="7" cy="7" r="7"></circle>
-                  <path d="M12,13 L17,18" stroke-linecap="square"></path>
+  <nav class="navbar navbar-expand-lg navbar-light navbar-sticky-scrolling">
+    <a class="navbar-brand" href="#" style="margin-left:1.7em;">
+      <img src="https://cdn.iconscout.com/icon/free/png-256/farmer-2204210-1838555.png" alt="brand_image" width="30" height="29" class="d-inline-block align-top">
+      &nbsp;FarmEasy
+    </a>
+    <button class="navbar-toggler btn " style="background-color : #EAF6F6;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <div data-is-ix2-target="1" class="g-nav_menu-button-icon" data-w-id="8c5acd42-4f32-fafd-ae4e-e7aeb2234b27" data-animation-type="lottie"
+        data-src="https://assets-global.website-files.com/5f1a22ca3b746e2f46cafd62/5f1a22ca3b746e32a7cafdbb_nav.json" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="1.5" data-duration="0"
+        data-ix2-initial-state="0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" preserveAspectRatio="xMidYMid meet" style="width: 100%; height: 100%; transform: translate3d(0px, 0px, 0px);">
+          <defs>
+            <clipPath id="__lottie_element_2">
+              <rect width="24" height="24" x="0" y="0"></rect>
+            </clipPath>
+            <clipPath id="__lottie_element_16">
+              <path d="M0,0 L24,0 L24,24 L0,24z"></path>
+            </clipPath>
+          </defs>
+          <g clip-path="url(#__lottie_element_2)">
+            <g clip-path="url(#__lottie_element_16)" transform="matrix(1,0,0,1,0,0)" opacity="1" style="display: block;">
+              <g transform="matrix(1,0,0,1,12,22)" opacity="1" style="display: block;">
+                <g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)">
+                  <path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
+                  <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
                 </g>
-              </svg>
-              Search&nbsp;&nbsp;&nbsp;
-            </button>
-          </form>
-          <li class="nav-item">
-            <button type="button" style="border : none;" class="btn btn-outline-primary">
-              <a class="nav-link " style="padding: 0px;" aria-current="page" href="#">About Us</a>
-          </li>
-          <li class="nav-item dropdown">
-            <button type="button" style="border : none;" class="btn btn-outline-warning">
-              <a class="nav-link dropdown-toggle" style="padding: 0px;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Fertilizers
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Organic</a>
-                <a class="dropdown-item" href="#">Chemical</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Mix of both <em>(recommended)</em></a>
-              </div>
-          </li>
-          <li class="nav-item">
-            <button type="button" style="border : none;" class="btn btn-outline-secondary">
-              <a class="nav-link" style="padding: 0px;" href="#">Pesticides</a>
-          </li>
-          <li class="nav-item">
-            <button type="button" style="border : none;" class="btn btn-outline-info">
-              <a class="nav-link " style="padding: 0px;" href="#">Blog</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav navbar-nav-scroll ">
-          <li class="nav__item nav__item--button nav__item--button-mobile" style="margin-right:.4em;">
-            <a href="" class="button button--small" style="background-color: rgb(245, 81, 91); color: rgb(255, 255, 255); cursor:pointer" onmouseover="this.style.color='#000000'" onmouseout="this.style.color='#FFFFFF'" rel="noopener noreferrer"
-              target="_blank">
-              <span>Log in</span>
+              </g>
+              <g transform="matrix(1,0,0,1,12,16)" opacity="1" style="display: block;">
+                <g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)">
+                  <path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
+                  <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
+                </g>
+              </g>
+              <g transform="matrix(1,0,0,1,12,9.998000144958496)" opacity="1" style="display: block;">
+                <g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)">
+                  <path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
+                  <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
+                </g>
+              </g>
+            </g>
+          </g>
+        </svg></div>
+      <span class="navbar-toggler-icon" style="display: none ;">
+        <svg class="svg-inline--fa fa-times fa-w-11 fa-fw m-0" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512" data-fa-i2svg="">
+          <path fill="currentColor"
+            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z">
+          </path>
+        </svg>
+      </span>
+    </button>
+    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+      <ul class="navbar-nav navbar-nav-scroll mr-auto " style="--bs-scroll-height: 150px;">
+        <form class="d-flex my-2 my-lg-0" role="search" style="margin-left: 1.875em;margin-right: 5em;">
+          <input class="form-control mr-sm-2" type="search" placeholder="Find all your wants here" aria-label="Search">
+          <button class="btn btn-outline-success  my-2 my-sm-0" type="submit">
+            <svg style="padding-top:4px;" role="img" aria-labelledby="search-icon-title" class="search-icon input-field__icon css-0 evmgdi90" width="18" height="18" viewBox="0 0 22 22">
+              <title id="search-icon-title">Search</title>
+              <g transform="translate(2.000000, 2.000000)" stroke="#999" stroke-width="1.5" fill="none">
+                <circle cx="7" cy="7" r="7"></circle>
+                <path d="M12,13 L17,18" stroke-linecap="square"></path>
+              </g>
+            </svg>
+            Search&nbsp;&nbsp;&nbsp;
+          </button>
+        </form>
+        <li class="nav-item">
+          <button type="button" style="border : none;" class="btn btn-outline-primary">
+            <a class="nav-link " style="padding: 0px; font-family: 'Bree Serif', serif;" aria-current="page" href="#">About Us</a>
+        </li>
+        <li class="nav-item dropdown">
+          <button type="button" style="border : none;" class="btn btn-outline-warning">
+            <a class="nav-link dropdown-toggle" style="padding: 0px; font-family: 'Bree Serif', serif;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Fertilizers
             </a>
-          </li>
-          <li class="nav__item nav__item--button nav__item--button-mobile">
-            <a href="" class="button button--small" style="background-color: #5BB318; color: rgb(255, 255, 255); cursor:pointer" onmouseover="this.style.color='#000000'" onmouseout="this.style.color='#FFFFFF'" rel="noopener noreferrer"
-              target="_blank">
-              <span>Sign up</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Organic</a>
+              <a class="dropdown-item" href="#">Chemical</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#" style="font-family: 'Bree Serif', serif;">Mix of both <em>(recommended)</em></a>
+            </div>
+        </li>
+        <li class="nav-item">
+          <button type="button" style="border : none;" class="btn btn-outline-secondary">
+            <a class="nav-link" style="padding: 0px; font-family: 'Bree Serif', serif;" href="#">Pesticides</a>
+        </li>
+        <li class="nav-item">
+          <button type="button" style="border : none;" class="btn btn-outline-info">
+            <a class="nav-link " style="padding: 0px; font-family: 'Bree Serif', serif;" href="#">Blog</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav navbar-nav-scroll ">
+        <li class="nav__item nav__item--button nav__item--button-mobile" style="margin-right:.4em;">
+          <a href="" class="button button--small" style="background-color: rgb(245, 81, 91); color: rgb(255, 255, 255); cursor:pointer" onmouseover="this.style.color='#000000'" onmouseout="this.style.color='#FFFFFF'" rel="noopener noreferrer"
+            target="_blank">
+            <span>Log in</span>
+          </a>
+        </li>
+        <li class="nav__item nav__item--button nav__item--button-mobile">
+          <a href="" class="button button--small" style="background-color: #5BB318; color: rgb(255, 255, 255); cursor:pointer" onmouseover="this.style.color='#000000'" onmouseout="this.style.color='#FFFFFF'" rel="noopener noreferrer" target="_blank">
+            <span>Sign up</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   </section>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -149,5 +182,5 @@
 
 </html>
 <!-- &nbsp; -->
-<!-- box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 15%); -->    
+<!-- box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 15%); -->
 
