--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               </button>
             </form>
             <li class="nav-item">
-              <button type="button" style="border : none;" class="btn btn-outline-primary">
+              <button type="button" style="border : none;" class="btn btn-outline-warning">
                 <a class="nav-link " style="padding: 0px; font-family: 'Bree Serif', serif; font-size: large; color:beige;" aria-current="page" href="#">About Us</a>
             </li>
             <li class="nav-item dropdown">
@@ -180,11 +180,11 @@
                 </div>
             </li>
             <li class="nav-item">
-              <button type="button" style="border : none;" class="btn btn-outline-secondary">
+              <button type="button" style="border : none;" class="btn btn-outline-warning">
                 <a class="nav-link" style="padding: 0px; font-family: 'Bree Serif', serif; font-size: large; color:beige;" href="#">Pesticides</a>
             </li>
             <li class="nav-item">
-              <button type="button" style="border : none;" class="btn btn-outline-info">
+              <button type="button" style="border : none;" class="btn btn-outline-warning">
                 <a class="nav-link " style="padding: 0px; font-family: 'Bree Serif', serif; font-size: large; color:beige;" href="#">Blog</a>
             </li>
           </ul>
