--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="icon" href="icon/harvest.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Courier+Prime&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=Courier+Prime&family=Permanent+Marker&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>FarmEasy | A new way to buy and sell farm products </title>
   <style media="screen">
@@ -82,16 +82,16 @@
     .header-of-page {
       position: absolute;
       width: 100%;
-      left: 0;
-      top: 0;
-      z-index: 3;
+      /* left: 0;
+      top: 0; */
+      /* z-index: 3; */
     }
 
     .header-content::before {
       position: absolute;
       width: 100%;
       height: 100%;
-      background-color: rgba(57, 49, 49, 0.15);
+      background-color: rgba(57, 49, 49, 0.2);
       content: '';
     }
 
@@ -101,24 +101,37 @@
       width: 100%;
       padding: 16px 30px;
       box-sizing: border-box;
-      top: 40%;
+      top: 45%;
       color: beige;
       text-align: center;
       margin-top: -110px;
     }
-  </style>
+
+    .heading-text {
+      line-height : normal;
+      /* margin-bottom:.5em; */
+      font-family: 'Bebas Neue', cursive;
+      letter-spacing:.05em;
+      word-spacing:.3em;
+      background :linear-gradient(118deg,#afffc7,#c5e6ff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-size: xxx-large;
+    }
+
+    </style>
 </head>
 
 <body>
-  <div class="clear-space">
+  <div class="clear-space ">
     <section class="global-banner" style="background-image : url('https://www.theindiaforum.in/sites/default/files/field/image/2022/06/21/ramkumar-radhakrishnan-wikimedia-1622193304-1622193304.jpeg')">
       <header class="header-of-page">
         <div class="header-content">
           <nav class="navbar navbar-expand-lg bg-link navbar-light" style="margin-bottom: .4em; border:solid; border-bottom:.20em; border-color:transparent; background-color: transparent; ">
             <!-- foralwhite -->
-            <a class="navbar-brand" href="#" style="margin-left:1.7em;">
-              <img src="https://cdn.iconscout.com/icon/free/png-256/farmer-2204210-1838555.png" alt="brand_image" width="30" height="29" class="d-inline-block align-top">
-              &nbsp;FarmEasy
+            <a class="navbar-brand" href="#" style="color:white; font-family: 'Permanent Marker', cursive; font-size: 1.5em; ">
+              <img src="https://cdn.iconscout.com/icon/free/png-256/farmer-2204210-1838555.png" alt="brand_image" width="30" height="29" class="d-inline-block align-top" style="margin-top:3px;">
+            FarmEasy
             </a>
             <button class="navbar-toggler btn " style="background-color : #EAF6F6;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
@@ -226,9 +239,11 @@
       </header>
       <div class="inner-content">
         <div class="container">
-          <h1 style="line-height : normal;">Revolutionizing the Fresh Produce Supply Chain</h1>
-          <h5 style="line-height : 150%;">Sell Your farm products at a price seen during the time of inflation. Driven by cutting edge technology, we source fresh produce from farmers and sell to businesses, across India</h5>
-          <button type="button" class="btn ">Join Us</button>
+          <h1 class="heading-text">Revolutionizing the Fresh Produce Supply Chain</h1>
+          <h5 style="font-size: x-large;">Sell Your farm products at a price seen during the time of inflation. Driven by cutting edge technology, we source fresh produce from farmers and sell to businesses, across India</h5>
+          <button type="button" class="btn " style="background: linear-gradient(to right, #ffefba, #ffffff); opacity: .9;">
+            <a href="#" class="nav-link" style="padding:0px; background: linear-gradient(to bottom, #bdc3c7, #2c3e50); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Join Us</a>
+          </button>
         </div>
       </div>
   </div>
