--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     .header-of-page {
       position: absolute;
       width: 100%;
-      /* left: 0;
-      top: 0; */
-      /* z-index: 3; */
+      left: 0;
+      top: 0;
+      z-index: 3;
     }
 
     .header-content::before {
@@ -259,3 +259,4 @@
 </html>
 <!-- &nbsp; -->
 <!-- box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 15%); -->
+
