--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="icon" href="icon/harvest.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=Courier+Prime&family=Permanent+Marker&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Acme&family=Bree+Serif&family=Courier+Prime&family=Permanent+Marker&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>FarmEasy | A new way to buy and sell farm products </title>
   <style media="screen">
@@ -110,9 +110,9 @@
     .heading-text {
       line-height : normal;
       /* margin-bottom:.5em; */
-      font-family: 'Bebas Neue', cursive;
+      font-family: 'Acme', sans-serif;
       letter-spacing:.05em;
-      word-spacing:.3em;
+      word-spacing:.2em;
       background :linear-gradient(118deg,#afffc7,#c5e6ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -259,4 +259,3 @@
 </html>
 <!-- &nbsp; -->
 <!-- box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 15%); -->
-
