--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
         <div class="container">
           <h1 class="heading-text">Revolutionizing the Fresh Produce Supply Chain</h1>
           <h5 style="font-size: x-large;">Sell Your farm products at a price seen during the time of inflation. Driven by cutting edge technology, we source fresh produce from farmers and sell to businesses, across India</h5>
-          <button type="button" class="btn " style="background: linear-gradient(to right, #ffefba, #ffffff); opacity: .9;">
+<!--           <button type="button" class="btn " style="background: linear-gradient(to right, #ffefba, #ffffff); opacity: .9;">
             <a href="#" class="nav-link" style="padding:0px; background: linear-gradient(to bottom, #bdc3c7, #2c3e50); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Join Us</a>
-          </button>
+          </button> -->
         </div>
       </div>
   </div>
