--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script src="https://kit.fontawesome.com/7b158c3a4f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="icon" href="icon/harvest.ico">
   <link href="https://fonts.googleapis.com/css2?family=Acme&family=Bree+Serif&family=Caveat:wght@500&family=Courier+Prime&family=Permanent+Marker&family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -21,6 +22,7 @@
       font-weight: 700;
       background-color: #fff;
       border: 1px solid #3c3830;
+      border-radius:50px;
       box-shadow: 3px 3px 0 #3c3830;
       color: #3c3830;
       display: -webkit-inline-box;
@@ -61,7 +63,7 @@
 
     .global-banner {
       width: 100%;
-      height: 110vh;
+      height: 100vh;
       position: relative;
       box-sizing: border-box;
       background-position: center;
@@ -100,75 +102,43 @@
       width: 100%;
       padding: 16px 30px;
       box-sizing: border-box;
-      top: 40%;
+      top: 43%;
       color: beige;
       text-align: center;
       margin-top: -110px;
     }
 
     .heading-text {
-      line-height : normal;
+      line-height: normal;
       /* margin-bottom:.5em; */
       font-family: 'Acme', sans-serif;
-      letter-spacing:.05em;
-      word-spacing:.2em;
-      background :linear-gradient(118deg,#afffc7,#c5e6ff);
+      letter-spacing: .05em;
+      word-spacing: .2em;
+      background: linear-gradient(118deg, #afffc7, #c5e6ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      font-size: xxx-large;
+      font-size: 60px;
     }
-
-    </style>
+    .btn {
+      border-radius: 50px;
+    }
+  </style>
 </head>
 
 <body>
   <div class="clear-space ">
-    <section class="global-banner" style="background-image : url('https://www.theindiaforum.in/sites/default/files/field/image/2022/06/21/ramkumar-radhakrishnan-wikimedia-1622193304-1622193304.jpeg')">
+    <section class="global-banner" style="background-image : url('https://www.theindiaforum.in/sites/default/files/field/image/2022/06/21/ramkumar-radhakrishnan-wikimedia-1622193304-1622193304.jpeg');">
       <header class="header-of-page">
         <div class="header-content sticky-top">
-          <nav class="navbar navbar-expand-lg bg-link navbar-light" style="margin-bottom: .4em; border:solid; border-bottom:.20em; border-color:transparent; background-color: transparent; ">
+          <nav class="navbar navbar-expand-lg navbar-light" style="margin-bottom: .4em; border:solid; border-bottom:.20em; border-color:transparent; background-color: transparent; ">
             <!-- foralwhite -->
             <a class="navbar-brand" href="#" style="color:white; font-family: 'Permanent Marker', cursive; font-size: 1.5em; ">
               <img src="https://cdn.iconscout.com/icon/free/png-256/farmer-2204210-1838555.png" alt="brand_image" width="30" height="29" class="d-inline-block align-top" style="margin-top:3px;">
-            FarmEasy
+              FarmEasy
             </a>
             <button class="navbar-toggler btn " style="background-color : #EAF6F6;" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
-              <div data-is-ix2-target="1" class="g-nav_menu-button-icon" data-w-id="8c5acd42-4f32-fafd-ae4e-e7aeb2234b27" data-animation-type="lottie"
-                data-src="https://assets-global.website-files.com/5f1a22ca3b746e2f46cafd62/5f1a22ca3b746e32a7cafdbb_nav.json" data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="1.5" data-duration="0"
-                data-ix2-initial-state="0"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" preserveAspectRatio="xMidYMid meet" style="width: 100%; height: 100%; transform: translate3d(0px, 0px, 0px);">
-                  <defs>
-                    <clipPath id="__lottie_element_2">
-                      <rect width="24" height="24" x="0" y="0"></rect>
-                    </clipPath>
-                    <clipPath id="__lottie_element_16">
-                      <path d="M0,0 L24,0 L24,24 L0,24z"></path>
-                    </clipPath>
-                  </defs>
-                  <g clip-path="url(#__lottie_element_2)">
-                    <g clip-path="url(#__lottie_element_16)" transform="matrix(1,0,0,1,0,0)" opacity="1" style="display: block;">
-                      <g transform="matrix(1,0,0,1,12,22)" opacity="1" style="display: block;">
-                        <g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)">
-                          <path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
-                          <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
-                        </g>
-                      </g>
-                      <g transform="matrix(1,0,0,1,12,16)" opacity="1" style="display: block;">
-                        <g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)">
-                          <path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
-                          <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
-                        </g>
-                      </g>
-                      <g transform="matrix(1,0,0,1,12,9.998000144958496)" opacity="1" style="display: block;">
-                        <g opacity="1" transform="matrix(1.3328100442886353,0,0,0.9994699954986572,0,0)">
-                          <path fill="rgb(0,0,0)" fill-opacity="1" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
-                          <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4" stroke="rgb(0,0,0)" stroke-opacity="1" stroke-width="2" d=" M-6,-4 C-6,-4 6,-4 6,-4"></path>
-                        </g>
-                      </g>
-                    </g>
-                  </g>
-                </svg>
-              </div>
+              <i class="fa-solid fa-bars"></i>
               <span class="navbar-toggler-icon" style="display: none ;">
                 <svg class="svg-inline--fa fa-times fa-w-11 fa-fw m-0" aria-hidden="true" focusable="false" data-prefix="fa" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512" data-fa-i2svg="">
                   <path fill="currentColor"
@@ -180,16 +150,10 @@
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
               <ul class="navbar-nav navbar-nav-scroll mr-auto " style="--bs-scroll-height: 150px;">
                 <form class="d-flex my-2 my-lg-0" role="search" style="margin-left: 1.875em;margin-right: 5em;">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Find all your wants here" aria-label="Search">
-                  <button class="btn btn-success  my-2 my-sm-0" type="submit">
-                    <svg style="padding-top:4px;" role="img" aria-labelledby="search-icon-title" class="search-icon input-field__icon css-0 evmgdi90" width="18" height="18" viewBox="0 0 22 22">
-                      <title id="search-icon-title">Search</title>
-                      <g transform="translate(2.000000, 2.000000)" stroke="white" stroke-width="1.5" fill="none">
-                        <circle cx="7" cy="7" r="7"></circle>
-                        <path d="M12,13 L17,18" stroke-linecap="square"></path>
-                      </g>
-                    </svg>
-                    Search&nbsp;&nbsp;&nbsp;
+                  <input class="form-control mr-sm-2" type="search" placeholder=" Find all your wants here" aria-label="Search">
+                  <button class="btn btn-success roundd my-2 my-sm-0" type="submit">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    &nbsp;Search&nbsp;&nbsp;&nbsp;
                   </button>
                 </form>
                 <li class="nav-item">
@@ -198,9 +162,10 @@
                 </li>
                 <li class="nav-item dropdown">
                   <button type="button" style="border : none;" class="btn btn-outline-warning">
-                    <a class="nav-link dropdown-toggle" style="padding: 0px; font-family: 'Bree Serif', serif; font-size: large; color:beige;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    <a class="nav-link " style="padding: 0px; font-family: 'Bree Serif', serif; font-size: large; color:beige;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
                       aria-expanded="false">
-                      Fertilizers
+                      Fertilizers&nbsp;
+                      <i class="fa-solid fa-angle-down"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="#">Organic</a>
@@ -222,13 +187,13 @@
                 <li class="nav__item nav__item--button nav__item--button-mobile" style="margin-right:.4em;">
                   <a href="" class="button button--small" style="background-color: rgb(245, 81, 91); color: rgb(255, 255, 255); cursor:pointer" onmouseover="this.style.color='#000000'" onmouseout="this.style.color='#FFFFFF'" rel="noopener noreferrer"
                     target="_blank">
-                    <span>Log in</span>
+                    <span>Log in&nbsp;<i class="fa-solid fa-user"></i></span>
                   </a>
                 </li>
                 <li class="nav__item nav__item--button nav__item--button-mobile">
                   <a href="" class="button button--small" style="background-color: #5BB318; color: rgb(255, 255, 255); cursor:pointer" onmouseover="this.style.color='#000000'" onmouseout="this.style.color='#FFFFFF'" rel="noopener noreferrer"
                     target="_blank">
-                    <span>Sign up</span>
+                    <span>Sign up&nbsp;<i class="fa-regular fa-user"></i></span>
                   </a>
                 </li>
               </ul>
@@ -237,14 +202,12 @@
         </div>
       </header>
       <div class="inner-content">
-        <div class="container">
-          <h1 class="heading-text" style="margin-bottom:.5em">Revolutionizing the Fresh Produce Supply Chain</h1>
-
-          <h5 style="font-size: x-large; font-family: 'Roboto Mono', monospace;">Sell Your farm products at a price seen during the time of inflation. Driven by cutting edge technology, we source fresh produce from farmers and sell to businesses, across India</h5>
+        <div class="container" style="padding-right:80px; padding-left:80px">
+          <h1 class="heading-text" style="margin-bottom:.7em;">Revolutionizing the Fresh Produce Supply Chain</h1>
+          <h5 style="font-size: 1.685em; font-family: 'Roboto Mono', monospace;">Driven by cutting edge technology, we source fresh produce from farmers and sell to businesses, across India</h5>
         </div>
       </div>
-  </div>
-  </section>
+    </section>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -255,4 +218,3 @@
 </html>
 <!-- &nbsp; -->
 <!-- box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 15%); -->
-
