--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
     }
     .ovalbanana{
       width:100%;
-      height:50px;
-      border-radius: 50% / 100% 100% 0 0;
+      height:3em;
+      border-radius: 40% / 100% 100% 0 0;
       background-color: white;
       position: absolute;
-      top:565px;
+      top:93vh;
     }
   </style>
 </head>
@@ -225,7 +225,7 @@
       <center><h1>How's This</h1></center>
       <center><h1>How's This</h1></center>
       <center><h1>How's This</h1></center>
-      
+
 
 
     </section>
